--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -96,7 +96,7 @@
 		),
 
 		accent6: (
-			bg:				#ed4933,
+			bg:				#03A9F4,
 			fg-bold:		#ffffff,
 			fg:				mix(#ed4933, #ffffff, 25%),
 			fg-light:		mix(#ed4933, #ffffff, 40%),
