--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -34,6 +34,7 @@
 		bg:					#2e3842,
 		fg:					#fff,
 		fg-bold:			#fff,
+		fg-black:			#000000,
 		fg-light:			rgba(255,255,255,0.5),
 		border:				#fff,
 		border-bg:			rgba(144,144,144,0.25),
